--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     ]
   },
   "devDependencies": {
+    "bootstrap": "^5.3.0",
     "gh-pages": "^5.0.0",
+    "react-bootstrap": "^2.8.0",
     "react-router": "^6.14.1"
   }
 }
