--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-immutable-state-invariant": "^2.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -52,6 +55,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "@types/redux-immutable-state-invariant": "^2.1.2",
+    "gh-pages": "^5.0.0",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
