--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "bootstrap": "^5.3.0",
+    "konva": "^9.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-konva": "^18.2.10",
     "react-redux": "^8.1.1",
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1",
