--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "debounce": "^1.2.1",
     "konva": "^9.2.0",
     "lodash": "^4.17.21",
+    "module-alias": "^2.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
