--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.14.0",
-    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -25,12 +24,9 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.10",
-    "react-redux": "^8.1.1",
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
-    "redux": "^4.2.1",
-    "redux-immutable-state-invariant": "^2.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -62,8 +58,6 @@
   },
   "devDependencies": {
     "@types/debounce": "^1.2.1",
-    "@types/redux-immutable-state-invariant": "^2.1.2",
-    "gh-pages": "^5.0.0",
-    "redux-devtools-extension": "^2.13.9"
+    "gh-pages": "^5.0.0"
   }
 }
