--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
+  },
   "compilerOptions": {
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
@@ -19,5 +22,5 @@
       "@Models/*": ["./src/Model/*"]
     }
   },
-  "include": ["src"]
+  "include": ["./src/**/*"]
 }
